// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transform array of objects to camelCase 1`] = `
Array [
  Object {
    "firstName": "Stephen",
    "id": 1,
    "lastName": "Nelson",
  },
]
`;

exports[`Transform object to camelCase 1`] = `
Object {
  "firstName": "Stephen",
  "id": 1,
  "lastName": "Nelson",
}
`;

exports[`toCamelCase shortcut:  Transform array of objects to snake_case 1`] = `
Array [
  Object {
    "firstName": "Stephen",
    "id": 1,
    "lastName": "Nelson",
  },
]
`;

exports[`toCamelCase shortcut: Transform to camelCase 1`] = `
Object {
  "firstName": "Stephen",
  "id": 1,
  "lastName": "Nelson",
}
`;
